fix sidebar page - nav circle off center

--- a/src/components/SidebarPage.scss
+++ b/src/components/SidebarPage.scss
@@ -53,7 +53,7 @@
             content: "";
             position: absolute;
             border-radius: 5px;
-            right: -12.5px;
+            right: -11.5px;
             top: 9px;
             background-color: $line-orange;
             width: 10px;
